--- a/TaskManager/TaskManager/Pages/Users/changeRole.cshtml
+++ b/TaskManager/TaskManager/Pages/Users/changeRole.cshtml
@@ -9,7 +9,7 @@
            {
                <h2 class="title">Renounce the admin role</h2>
                <div id="centerContent">
-                   <a class="renounceAdminButton"  href="/users/stopBeingAdmin">
+                   <a class="renounceAdminButton" asp-controller="Roles" asp-action="StopBeingAdmin">
                        <p class="largeButton">Renounce</p>
                    </a>
                </div>
