--- a/TaskManager/TaskManager/Pages/login.cshtml
+++ b/TaskManager/TaskManager/Pages/login.cshtml
@@ -14,7 +14,7 @@
                        required />
                 <button class="largeButton" type="submit">with TaskManager</button>
                 <p class="title" id="or">or</p>
-                <a class="largeButton" id="googleLink" href="/google-login">
+                <a class="largeButton" id="googleLink" asp-controller="Login" asp-action="LogInWithGoogle">
                     <img src="~/googlelogo.png" alt="Google logo" height="30" width="30" />
                     <p>with Google</p>
                 </a>
