--- a/TaskManager/TaskManager/Pages/signUp.cshtml
+++ b/TaskManager/TaskManager/Pages/signUp.cshtml
@@ -21,7 +21,7 @@
             </div>
         </form>
         <p class="title" id="or">or</p>
-        <a class="largeButton" id="googleLink" href="/google-login">
+        <a class="largeButton" id="googleLink" asp-controller="Login" asp-action="LogInWithGoogle">
             <img src="~/googlelogo.png" alt="Google logo" height="30" width="30" />
             <p>with Google</p>
         </a>
