--- a/TaskManager/TaskManager/Pages/Shared/_publicLayout.cshtml
+++ b/TaskManager/TaskManager/Pages/Shared/_publicLayout.cshtml
@@ -5,7 +5,7 @@
     <div class="notfooter">
         <nav>
             <div>
-                <a href="/users">
+                <a href="/main">
                     <h1 class="logo" data-test="logo">TaskManager</h1>
                 </a>
             </div>
