--- a/TaskManager/TaskManager/Pages/main.cshtml
+++ b/TaskManager/TaskManager/Pages/main.cshtml
@@ -8,5 +8,7 @@
         <p>is a free, lightweight platform for teams to keep track of their projects.</p>
         <p>Accounts are free, and you can choose to sign in using Google.</p>
         <p>If you want to get familiar with our platform first, take a tour signing in as "Guest" (password: "Guest1234.")!</p>
-        <a class="largeButton" id="mainPageButton" data-test="signUpButton" href="/signUp">Sign up now!</a>
+        <a class="largeButton" id="mainPageButton" data-test="signUpButton" asp-controller="Login" asp-action="SignUp">
+            Sign up now!
+        </a>
     </div>
