--- a/TaskManager/TaskManager/Views/Project/AddProject.cshtml
+++ b/TaskManager/TaskManager/Views/Project/AddProject.cshtml
@@ -6,8 +6,7 @@
 <div class="displayCardsContainer middleWidthContainer firstContainer">
     <article class="displayCard">
         <h2 class="title">Add new project</h2>
-        <form action="/users/addProject" method="POST">
-            @Html.AntiForgeryToken()
+        <form asp-controller="Project" asp-action="AddProject" method="POST">
             <div id="inputContainer">
                 <input type="text" name="Title" placeholder="Title" required />
                 <textarea class="description" name="Description" placeholder="Description" required></textarea>
@@ -16,9 +15,9 @@
                     <select id="multipleSelector" multiple name="collaboratorIds">
                         <option value="" disabled hidden>Select collaborator(s)</option>
                         @{ foreach (var assignee in Model.assignees)
-                            {
+                           {
                                 <option value="@assignee.Id">@assignee.UserName</option>
-                            }
+                           }
                         }
                     </select>
                     @await Html.PartialAsync("~/Views/Shared/_ScriptForMultipleSelectPartial.cshtml")
