--- a/TaskManager/TaskManager/Views/Card/AddCard.cshtml
+++ b/TaskManager/TaskManager/Views/Card/AddCard.cshtml
@@ -29,6 +29,10 @@
                     }
                 }
                 <button class="largeButton" type="submit">Submit</button>
+                @if (User.Identity.Name.Equals("Guest"))
+                {
+                    <p class="errorMessage">Because this is just a trial account used for demonstrations, cards can be saved only for the short term.</p>
+                }
             </div>
         </form>
     </article>
