refactor(accessing userSecrets, presentation)

--- a/TaskManager/TaskManager/Pages/main.cshtml
+++ b/TaskManager/TaskManager/Pages/main.cshtml
@@ -6,7 +6,7 @@
 <div class="displayCardsContainer middleWidthContainer firstContainer">
     <h2 id="brandName" data-test="brandName">TaskManager</h2>
     <p>is a free, lightweight platform for teams to keep track of their projects.</p>
-    <p>[In reality, it's a study project where anyone can become an admin and access all data - beware!]</p>
+    <p>[In reality, it's a study project where anyone can become an admin and access all user-generated data - beware!]</p>
     <p>If you want to get familiar with our platform before creating an account, take a tour signing in as "Guest" (password: "Guest1234.")!</p>
     <a class="largeButton" id="mainPageButton" data-test="signUpButton" asp-controller="Login" asp-action="SignUp">
         Sign up now!
